[package]
name = "gst-plugin-tensorflow"
version = "0.1.0"
authors = ["Alex Rozgo <alex.rozgo@gmail.com>"]
repository = "https://github.com/Simbotic/gst-plugin-tensorflow"
license = "MIT/Apache-2.0"
edition = "2018"
description = "Tensorflow GStreamer Plugin"

[dependencies]
rand = "0.7"
glib = { git = "https://github.com/gtk-rs/glib" }
gstreamer = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-base = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-video = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
gstreamer-audio = { git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs" }
byte-slice-cast = "0.3"
num-traits = "0.2"
tensorflow = { version = "0.13.0", features = ["tensorflow_gpu"] }
opencv = {version = "0.23", default-features = false, features = ["opencv-41"]}

[lib]
name = "gsttensorflow"
crate-type = ["cdylib"]
path = "src/lib.rs"

[build-dependencies]
gst-plugin-version-helper = { path="./gst-plugin-version-helper" }
